cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_228.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:128: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:128:13: Write of unused value
126.           }
127.           if (l != -8) {
128.               n2ln(in, tin0, tin1, l + 8);
                   ^
129.               tin0 ^= tout0;
130.               tin1 ^= tout1;
